--- a/record/static/record/css/style.css
+++ b/record/static/record/css/style.css
@@ -41,6 +41,12 @@ a.petLink:visited {
     color: black;
 } */
 
+/* #petForm {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: flex-start; 
+    align-items: center;
+} */
 #petForm p{
 
     font-size: 15pt;
