--- a/record/templates/record/records_form.html
+++ b/record/templates/record/records_form.html
@@ -35,10 +35,17 @@
     {% csrf_token %}
 
     <div id="petForm" style="font-size:18px">
-    {{ form.as_p }}
+    {% for field in  form %}
+    
+    <p>
+    <labrel>{{ field.label_tag|cut:":" }}</label><br>
+    {{field }}<br>
+    </p>
+
+    {% endfor %}
     </div>
     <br>
-    <button class="btn btn-secondary" style="width:150px">기록</button>
+    <button class="btn btn-secondary" style="width:150px;height:60px;font-size:20px">기록</button>
     
 <form>
 <div>
