--- a/record/templates/record/records_update_form.html
+++ b/record/templates/record/records_update_form.html
@@ -3,12 +3,23 @@
 {% block content %}
 
 <script>
+    {% comment %} 피딩을 입력하지 않으면 피딩 무게를 입력하지 못하도록 하기 {% endcomment %}
+    function checkField1() {
+        const feeding = document.getElementById('id_feeding');
+        const feededWeight = document.getElementById('id_feededWeight');
+
+        if (feeding.value === '') {
+            feededWeight.disabled = true;
+        } else {
+            feededWeight.disabled = false;
+        }
+    }
     {% comment %} 피딩을 입력하면 피딩한 무게도 입력하도록 하기 {% endcomment %}
     function validateForm(event) {
         const feeding = document.getElementById('id_feeding');
         const feededWeight = document.getElementById('id_feededWeight');
 
-        if (feeding.value === '' || feededWeight.value === '') {
+        if (feeding.value != '' && feededWeight.value === '') {
             alert("피딩한 무게도 입력하세요");
             event.preventDefault(); // Prevent form submission
         }
@@ -19,15 +30,32 @@
 <div class="text-center">
 <h1>기록 수정</h1>
 <br><br>
-<form method="post" onsubmit="validateForm(event)">
+<form method="post" onsubmit="validateForm(event)" enctype="multipart/form-data">
     {% csrf_token %}
 
     <div id="petForm" style="font-size:18px">
-    {{ form.as_p }}
-    </div>
+        {% for field in  form %}
+        
+        <p>
+        <labrel style="font-size:12pt"><b>{{ field.label_tag|cut:":" }}</b></label><br>
+        {{ field }}<br>
+        </p>
+    
+        {% endfor %}
+        </div>
     <br>
-    <button class="btn btn-secondary" style="width:150px">수정</button>
+    <button class="btn btn-secondary" style="width:130px;height:45px;font-size:17px">수정</button>
+
+    <br><br>
     
 <form>
 <div>
+
+<script>
+    {% comment %}  필드의 속성 지정하기 {% endcomment %}
+    const feeding = document.getElementById('id_feeding');
+    const feededWeight = document.getElementById('id_feededWeight');
+    feeding.setAttribute('oninput', 'checkField1()');
+    feededWeight.setAttribute('disabled', 'disabled');
+</script>
 {% endblock %}
